# atk-json-search

atk-faiss-search/: README.md  pyproject.toml
atk-faiss-search/atk_faiss_search/: main.py  search.py
atk-json-embeddings/: README.md  pyproject.toml
atk-json-embeddings/atk_json_embeddings/: json_loader.py  pipeline.py  run_pipeline.py  test.py
atk-json-embeddings/config/: ingestion_config.yaml
