[tool.poetry]
name = "atk-faiss-search"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "atk_faiss_search"}]

[tool.poetry.dependencies]
python = "^3.10"
faiss-cpu = "1.7.4"
langchain = "0.0.163"
sentence-transformers = "2.2.2"
openai = "0.27.5"
typer = "^0.9.0"
instructorembedding = "^1.0.0"


[[tool.poetry.source]]
name = "prod"
url = "https://pypi.aganitha.ai/"
default = false
secondary = true


[[tool.poetry.source]]
name = "dev"
url = "https://dev-pypi.aganitha.ai/"
default = false
secondary = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
atk-faiss-search = "atk_faiss_search.main:main"
